--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,13 @@
   </head>
   <body>
     <div class="logo-container">
-      <img src="./assets/LOGO-40 1.svg" alt="Nice logo" />
+      <img class="logo" src="./assets/LOGO-40 1.svg" alt="Nice logo" />
     </div>
     <div class="redberry-logo">
-      <img src="./assets/LOGO-02 3.svg" alt="Redberry logo" />
+      <img class="red-logo" src="./assets/LOGO-02 3.svg" alt="Redberry logo" />
+      <hr>
     </div>
     <button>
-      
       <a href="./pages/personal-page/personal.html"> რეზუმეს დამატება </a>
     </button>
   </body>
