--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
       <hr>
     </div>
     <button>
-      <a href="./pages/personal-page/personal.html"> რეზუმეს დამატება </a>
+      <a href="./pages/personal-page/personal.html"> რეზიუმეს დამატება </a>
     </button>
   </body>
 </html>
