--- a/src/index.html
+++ b/src/index.html
@@ -5,18 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/6.5.2/rxjs.umd.js"></script>
     <title>Start</title>
   </head>
   <body>
     <div class="logo-container">
-      <img class="logo" src="./assets/LOGO-40 1.svg" alt="Nice logo" />
+      <img class="Nice-logo" src="./assets/LOGO-40 1.svg" alt="Nice-logo" />
     </div>
     <div class="redberry-logo">
-      <img class="red-logo" src="./assets/LOGO-02 3.svg" alt="Redberry logo" />
-      <hr>
+      <img class="Redberry-logo" src="./assets/LOGO-02 3.svg" alt="Redberry-logo" />
     </div>
     <button>
-      <a href="./pages/personal-page/personal.html"> რეზიუმეს დამატება </a>
+      <a href="./pages/personal-page/personal.html"> რეზუმეს დამატება </a>
     </button>
+    <script defer src="script.js"></script>
   </body>
 </html>
